src/objects/MM85BIO__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Contact - Biographical Overview text</description>
    <fields>
        <fullName>Biographical_Text__c</fullName>
        <label>Biographical Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_MMD_ID__c</fullName>
        <label>Contact MMD ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MMD Bio Overviews</relationshipLabel>
        <relationshipName>MMDBioOverview</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Site MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>MMD Bio Overview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Bio Overviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>